# lexinetz

./: .env.docker  .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  index.html  local.dockerfile  pyproject.toml  requirements.txt  server.sh  uv-upgrade.sh
.github/: dependabot.yml
docs/: book.toml  index.html
docs/src/: SUMMARY.md
docs/src/guide/: install-docker.md  install.md  run.md  setup-llm-provider.md
src/: constants.py  gradio-ui.py  solara.py  translator.py  webapp.py
src/lexinetz/: __init__.py
