[tool.poetry]
name = "lexinetz"
version = "0.1.0"
description = "lexninetz is an experimental project that employs knowledge graphs and agent-based reflection for natural language translation using multi-lingual language models."
authors = ["Anirban Basu <anirbanbasu@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false
repository = "https://github.com/anirbanbasu/lexinetz"
keywords = ["agent", "reflection", "translation", "language-translation", "artificial-intelligence", "knowledge-graph", "large-language-models", "llms", "agentic-workflow", "machine-translation"]

[tool.poetry.dependencies]
python = "^3.12"
llama-index-core = "^0.10.44"
pytest = "^8.2.2"
solara = "^1.33.0"
llama-index-llms-ollama = "^0.1.5"
llama-index-llms-cohere = "^0.2.0"
llama-index-llms-openai = "^0.1.22"
python-dotenv = "^1.0.1"
icecream = "^2.1.3"
markdown = "^3.6"

[tool.poetry.group.dev.dependencies]
solara = "^1.33.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Set the virtualenv to be in the project directory
# poetry config virtualenvs.in-project true