[project]
name = "lexinetz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Anirban Basu", email = "anirbanbasu@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.36.2",
    "llama-index-core>=0.12.48",
    "llama-index-llms-cohere>=0.5.0",
    "llama-index-llms-llamafile>=0.3.0",
    "llama-index-llms-ollama>=0.6.2",
    "llama-index-llms-openai>=0.4.7",
    "markdown>=3.8.2",
    "python-dotenv>=1.1.1",
    "solara>=1.50.0",
]

[project.scripts]
lexinetz = "lexinetz:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "icecream>=2.1.5",
    "pre-commit>=4.2.0",
]
test = [
    "coverage>=7.9.2",
    "pytest>=8.4.1",
]
